Increase gaming area size to fix bug on small devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ button img {
 @media screen and (max-width:1000px) {
 
     #gaming-area {
-        height: 75%;
+        height: 90%;
     }
 
     #score {
